Modal text-align fix

--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,42 @@ img {
   line-height: 1.18;
   letter-spacing: 0.02em;
 }
+.page-header__soc-list {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .page-header__soc-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 64px;
+    margin-bottom: -15px;
+  }
+}
+.page-header__soc-item {
+  margin-right: 10px;
+  margin-bottom: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.page-header__soc-item:not(:last-child)::after {
+  content: "";
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
+}
+.page-header__soc-link {
+  display: inline;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
 .page-header__container {
   position: relative;
   display: -webkit-box;
@@ -322,6 +358,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
+
 .page-header__logo {
   padding-top: 16px;
   padding-bottom: 16px;
@@ -332,6 +369,7 @@ img {
     padding-bottom: 25px;
   }
 }
+
 .page-header__button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -368,6 +406,7 @@ img {
     display: none;
   }
 }
+
 .page-header__menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -392,7 +431,7 @@ img {
             flex-direction: column;
     position: absolute;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     top: 0;
     left: 0;
     padding: 48px 40px;
@@ -405,41 +444,6 @@ img {
     display: -ms-flexbox;
     display: flex;
   }
-}
-.page-header__soc-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-top: 64px;
-  margin-bottom: -15px;
-}
-@media screen and (min-width: 768px) {
-  .page-header__soc-list {
-    display: none;
-  }
-}
-.page-header__soc-item {
-  margin-right: 10px;
-  margin-bottom: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.page-header__soc-item:not(:last-child)::after {
-  content: "";
-  height: 22px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-left: 10px;
-}
-.page-header__soc-link {
-  display: inline;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: #2196f3;
 }
 
 .section.hero {
@@ -554,6 +558,7 @@ img {
   max-width: 450px;
   padding: 40px;
   border-radius: 4px;
+  text-align: center;
   background-color: #ffffff;
 }
 @media screen and (min-width: 1200px) {
