--- a/sass/components/_modal-order.scss
+++ b/sass/components/_modal-order.scss
@@ -27,6 +27,7 @@
   max-width: 450px;
   padding: 40px;
   border-radius: 4px;
+  text-align: center;
   background-color: $contrast-color;
 
   @media screen and (min-width: 1200px) {
