--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,4 +1,4 @@
-@import "../components/pages";
+@import "../components/nav";
 @import "../components/contacts";
 
 .page-header {
@@ -9,6 +9,39 @@
   font-weight: 500;
   line-height: 1.18;
   letter-spacing: 0.02em;
+
+  &__soc-list {
+    display: none;
+
+    @media screen and (max-width: 767px) {
+      display: flex;
+      width: 100%;
+      flex-wrap: wrap;
+      margin-top: 64px;
+      margin-bottom: -15px;
+    }
+  }
+
+  &__soc-item {
+    margin-right: 10px;
+    margin-bottom: 15px;
+    display: flex;
+  }
+
+  &__soc-item:not(:last-child)::after {
+    content: "";
+    height: 22px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    margin-left: 10px;
+  }
+
+  &__soc-link {
+    display: inline;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: $accent;
+  }
 }
 
 .page-header__container {
